examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/infer_match_list_reconstruct.st
language core;

extend with #type-reconstruction, #lists;

fn main(n : Nat) -> Nat {
  return (fn (a : auto) { return match(0) {
    x => x
    | y => []
		}
  }) (0)
}//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
\n\n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
/n/n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
